--- a/package.json
+++ b/package.json
@@ -4,31 +4,30 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.4",
-    "@heroicons/react": "^2.0.13",
-    "cloudinary": "^1.32.0",
-    "eslint-config-next": "^13.0.1",
-    "framer-motion": "^7.6.4",
-    "imagemin": "^8.0.1",
-    "imagemin-jpegtran": "^7.0.0",
-    "next": "latest",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
+    "cloudinary": "^1.41.0",
+    "framer-motion": "^10.16.4",
+    "next": "^14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hooks-global-state": "^2.0.0",
-    "react-swipeable": "^7.0.0",
-    "react-use-keypress": "^1.3.1"
+    "react-use-gesture": "^9.1.3"
   },
   "devDependencies": {
-    "@types/node": "18.11.9",
-    "@types/react": "18.2.8",
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.18",
-    "prettier": "^2.7.1",
-    "prettier-plugin-tailwindcss": "^0.1.13",
-    "tailwindcss": "^3.2.1",
-    "typescript": "4.8.4"
+    "@types/node": "^20.8.0",
+    "@types/react": "^18.2.25",
+    "@types/react-dom": "^18.2.10",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.51.0",
+    "eslint-config-next": "^14.0.0",
+    "postcss": "^8.4.31",
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.6",
+    "tailwindcss": "^3.3.5",
+    "typescript": "^5.2.2"
   }
 }
